[package]
name = "mandy"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "A hypersonic static-site generator written in Rust."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://github.com/angeldollface/mandy"
readme = "README.markdown"
keywords = [
  "site",
  "static",
  "generator"
]
categories = [
  "command-line-utilities"
]
exclude = [  
  "/.github"
]

[[bin]]
name = "mandy"
path = "src/main.rs"

[dependencies]
git2 ="0.17.2"
emojis = "0.6.0"
grass = "0.12.4"
liquid = "0.26.4"
serde = "1.0.164"
chrono = "0.4.26"
cliply =  "0.1.0"
colorize = "0.1.0"
markdown = "0.3.0"
coutils =  "1.4.0"
file-serve = "0.2.4"
serde_json = "1.0.96"
serde_derive = "1.0.164"
cargo_metadata = "0.15.4"
yaml-front-matter = "0.1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
