[workspace]
resolver = "2"
members = [
  "mandy-bin",
  "components/vento",
  "components/utils",
  "components/extras",
  "components/merrors",
  "components/compiler",
  "components/get_data",
  "components/processors",
]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
