[package]
name = "mandy-bin"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "The main binary for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://docs.rs/mandy/0.3.0"
readme = "../README.markdown"

[dependencies]
emojis = "0.6.0"
cliply =  "0.1.0"
colorize = "0.1.0"
coutils =  "1.4.0"
utils = { path = "../components/utils" }
merrors = { path = "../components/merrors" }
compiler = { path = "../components/compiler" }

[[bin]]
name = "mandy"
path = "src/main.rs"