[package]
name = "mandy-bin"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "The main binary for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.art/mandys-house/content/documentation/"
readme = "../README.markdown"

[dependencies]
emojis = "0.6.0"
cliply =  "0.2.0"
colorize = "0.1.0"
coutils =  "1.5.0"
utils = { path = "../components/utils", version = "0.2.0" }
merrors = { path = "../components/merrors", version = "0.1.0" }
compiler = { path = "../components/compiler", version = "0.1.0" }

[[bin]]
name = "mandy"
path = "src/main.rs"