[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "Core compiler functions for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://docs.rs/mandy/0.3.0"
readme = "../README.markdown"

[dependencies]
liquid = "0.26.4"
coutils =  "1.4.0"
utils = { path = "../utils" }
extras = { path = "../extras" }
merrors = { path = "../merrors" }
context = { path = "../context" }
get_data = { path = "../get_data" }
processors = { path = "../processors" }
