[package]
name = "context"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "The data structure for the site render context for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.boo/mandys-house/content/documentation/"
readme = "../../README.markdown"

[dependencies]
liquid = "0.26.4"