[package]
name = "dollmarkup"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "A Rust implementation of the Dollmarkup data language."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.art/mandys-house/content/documentation/"
readme = "../../README.markdown"

[dependencies]
merrors = { path = "../merrors", version = "0.1.0" }
serde = { version = "1.0.193", features = ["derive"] }