[package]
name = "extras"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "Extras for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://github.com/angeldollface/mandy"
readme = "../README.markdown"

[dependencies]
coutils =  "1.4.0"
serde_json = "1.0.96"
grass_compiler = "0.13.0"
utils = { path = "../utils" }
merrors = { path = "../merrors" }