[package]
name = "extras"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "Extras for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.art/mandys-house/content/documentation/"
readme = "../../README.markdown"

[dependencies]
coutils =  "1.5.0"
itertools = "0.12.1"
serde_json = "1.0.96"
grass_compiler = "0.13.0"
utils = { path = "../utils" }
context = { path = "../context" }
merrors = { path = "../merrors", version = "0.1.0" }