[package]
name = "get_data"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "Site data retrieval for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.art/mandys-house/content/documentation/"
readme = "../../README.markdown"

[dependencies]
liquid = "0.26.4"
coutils =  "1.5.0"
utils = { path = "../utils", version = "0.2.0" }
extras = { path = "../extras", version = "0.2.0"}
merrors = { path = "../merrors", version = "0.1.0" }
context = { path = "../context", version = "0.1.0" }
processors = { path = "../processors", version = "0.1.0"}