[package]
name = "merrors"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "Errors for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://docs.rs/mandy-bin/0.3.3"
readme = "../../README.markdown"