[package]
name = "processors"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "Processing functions for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.art/mandys-house/content/documentation/"
readme = "../../README.markdown"

[dependencies]
toml = "0.8.8"
liquid = "0.26.4"
coutils =  "1.5.0"
markdown = "0.3.0"
serde_json = "1.0.96"
yaml-front-matter = "0.1.0"
merrors = { path = "../merrors", version = "0.1.0" }
context = { path = "../context", version = "0.1.0" }
