[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "Important utilities for the Mandy static-site generator."
homepage = "https://github.com/angeldollface/mandy"
repository = "https://github.com/angeldollface/mandy"
documentation = "https://angeldollface.art/mandys-house/documentation/apis/"
readme = "../README.markdown"

[dependencies]
git2 = "0.17.2"
emojis = "0.6.0"
chrono = "0.4.26"
colorize = "0.1.0"
coutils =  "1.4.0"
file-serve = "0.2.4"
merrors = { path = "../merrors" }